added dynamic rendering to dashboard with handlebars

--- a/public/login.html
+++ b/public/login.html
@@ -128,7 +128,8 @@
             const error_element = document.querySelector("#error-msg");
             const loading = document.querySelector("#loading").classList;
 
-            document.querySelector("#login").onclick = async () => {
+            document.querySelector
+            ("#login").onclick = async () => {
                 loading.remove("opacity-0");
                 const name = document.querySelector("#name").value;
                 const password = document.querySelector("#password").value;
